# rs-discord-bot

./: .env  Cargo.toml  README.md
src/: main.rs
src/db/: mod.rs
src/discord/: mod.rs
